Fix the text wrap issue of the mobile layout for the pagination area.

--- a/assets/scss/pages/_store.scss
+++ b/assets/scss/pages/_store.scss
@@ -130,13 +130,19 @@
         padding-left: 12px;
        
     }
-  
+
     a{
         text-decoration:none;
         color:#000;
+        white-space:nowrap;
     }
+
    
-    li:first-child a{
+   
+    li:first-child {
+    
+    a{
+        
         padding:11px 12px;
         font-size:19px;
         &:hover{
@@ -145,23 +151,29 @@
           }
           @include mobile{
             font-size:16px;
-            
-          }
-        }
-      li:last-child a{
-        padding:11px 12px;
-        font-size:19px;
-        &:hover{
-          background-color: #f2f2f2;
-          color:#000;
-          }
-          @include mobile{
-            font-size:16px;
+          
             
           }
         }
       
+    }
+      li:last-child {
 
+      a{
+        
+        padding:11px 12px;
+        font-size:19px;
+        &:hover{
+          background-color: #f2f2f2;
+          color:#000;
+          }
+          @include mobile{
+            font-size:16px;
+            
+            
+          }
+        }
+      
 }
 
 .page-link{
@@ -175,5 +187,6 @@
   @include mobile{
     font-size:16px;
   }
-}
+ }
 
+}
